--- a/Style.css
+++ b/Style.css
@@ -17,6 +17,9 @@ body{
   justify-content:space-between;
   align-items:center;
   padding:20px 60px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .logo{
@@ -27,6 +30,7 @@ body{
 nav{
   display:flex;
   gap:20px;
+  flex-wrap: wrap;
 }
 
 /* Nav links styled like buttons */
